PLEDGE: New strace parser (#4225)
* PLEDGE: New strace parser
- This parser saves every path in a line and lets us pick and choose which
- Statistics are accurate now
  ones to use

* PLEDGE: Small fixes and now we wrap stat()
- Moved from perm to keys in the enforce() function, more name changes
  to come
- Fixed some comments
- Wrapped stat()

* PLEDGE: Better relative path handling for fstatat()

--- a/devel/pledge/TODO
+++ b/devel/pledge/TODO
@@ -1,3 +1,4 @@
 * Enforcer should allow paths that have a Stat permission lead to other calls without issues
 * We need to trace failed calls (we should start with ENOENT)
-* Implement new tracer for creation, deletion, metadata and list operations
+* Dependency graph of our own?
+* mprotect
