PLEDGE: Move to metadata, add getdents, initial error support - Moved to metadata flags, got rid of stat too - Added getdents64 to tracing and it is also wrapped in the enforcer - Moved rel2abspath to list_util - Updated the tracing and enforcing to be logically consistent, for   example, open is now metadata

--- a/devel/pledge/TODO
+++ b/devel/pledge/TODO
@@ -2,3 +2,5 @@
 * We need to trace failed calls (we should start with ENOENT)
 * Dependency graph of our own?
 * mprotect
+* pipes and unfinished
+* enforce()'ing needs a check up
